@@ -165,7 +165,7 @@
       "user_id": "3867131",
       "category": "Gacha",
       "description": "No description provided",
-      "icon": "https://play-lh.googleusercontent.com/ur3-7DGSVM-t4HOH56ObNmy43e7KaSDhKHNh9E7l2_k3RhErBopBoA9HTEvTETczQG_2kay9mkZzZ61t4M2L"
+      "icon": "https://play-lh.googleusercontent.com/PKMsanVZjsl6FD5Qc5Y5Ezw-l2J6Xtskqxfrf8PpQQtcbd011gepryahqjVyBMM_u3PBOPklHTG1kLFZLv3p"
     },
     {
       "name": "Bloodstrike",
@@ -381,11 +381,11 @@
       "icon": "https://play-lh.googleusercontent.com/pwZi0AZuEh2lxfHYRVS-b7YW3zNhrl6TH4I28Rcmz1S57lxTKfgGO_nxsTMGgOswWnvUQ9awc34K9p-Kq-7LYg"
     },
     {
-      "name": "AFK Journey",
+      "name": "AFK Journey: Homestead",
       "user_id": "52017014",
       "category": "Gacha",
       "description": "No description provided",
-      "icon": "https://play-lh.googleusercontent.com/ltX9tk8MFqckmZKmnJnbLhd8aj8B0P-HERsr9fhD4hhQuUfKln-nHFuYDzHwYQm9B-ih_u47Rbr9lhlnfKIXAA"
+      "icon": "https://play-lh.googleusercontent.com/sAvBxBBTnV5wixUb6XUIkmMNlU-LXYYJmXTsvTag1eD9njdQDoP4ru3XNi1oeMd6sGA5Si8fdkbT2u31KCoPhA"
     },
     {
       "name": "Silver and Blood",
@@ -552,7 +552,7 @@
       "user_id": "Jaydesu",
       "category": "Gacha",
       "description": "No description provided",
-      "icon": "https://play-lh.googleusercontent.com/UcY_Fu8F_dLCdscwQ2C6l5qG4TiEN72H3GYVS-EEX4OI146EBGrllGLAHOMJpcgpin4"
+      "icon": "https://play-lh.googleusercontent.com/hgPWXo9bzVUDiS5XvoJFPf2cNkmO5skgLPLBt91diavtDmzVxoctrshyn4g9kpqCgOLP"
     },
     {
       "name": "Resonance Solstice",
