@@ -1,7 +1,7 @@
 {
-  "fetched_at": "2026-01-24T13:38:04.376066+08:00",
-  "date": "2026-01-24",
-  "time": "13:38:04",
+  "fetched_at": "2026-02-02T10:23:12.766485+08:00",
+  "date": "2026-02-02",
+  "time": "10:23:12",
   "id": "UCPrdw58ZZXJyKYXdcCGViWw",
   "title": "Jaytrixia - Videos",
   "channel_url": "https://www.youtube.com/@Jaymantrix",
