@@ -1,0 +1,37 @@
+#about-section {
+  display: block;
+  padding: 32px 0 0 0;
+  min-height: 320px;
+  width: 100%;
+  opacity: 0;
+  animation: fadeInSlideUp 0.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+}
+.about-title {
+  width: 88%;
+  font-family: "Orbitron", sans-serif;
+  color: #00ccff;
+  text-align: center;
+  margin: 12px auto 12px auto;
+  font-size: clamp(1.9rem, 3vw, 2.2rem);
+  letter-spacing: 0.6px;
+  position: relative;
+  padding: 12px 8px;
+  background: linear-gradient(to right, rgba(0, 255, 255, 0.06), rgba(0, 170, 255, 0.04));
+  border-radius: 8px;
+  box-shadow: inset 0 2px 0 rgba(0, 255, 255, 0.4), inset 0 -2px 0 rgb(0, 255, 255, 0.4);
+}
+
+.about-box{
+  background: rgba(0, 31, 25, 0.85);
+  border: 2px solid #00ffcc;
+  border-radius: 12px;
+  padding: 32px 24px;
+  margin: 0 auto;
+  width: 80%;
+  color: #fff;
+  font-family: 'Poppins', 'Orbitron', Arial, sans-serif;
+  font-size: 1.1rem;
+  box-shadow: 0 8px 32px rgba(0,255,204,0.08);
+  white-space: pre-wrap;
+  word-break: break-word;
+}
